[package]
name = "python-core"
version = "0.4.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wcore_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module", "macros"] }
wcore = "0.4.4"

[package.metadata.maturin]
python-source = "package"
