[package]
name = "python-core"
version = "0.5.1"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/Wlanguage/python-core/"
description = "Python bindings for the W programming language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wcore_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module", "macros"] }
wcore = "0.5.1"

[package.metadata.maturin]
python-source = "package"
